# InvasoresDoEspaco

./: .gitignore  CMakeLists.txt  README.md  toolchain-windows.cmake
include/: ator.hpp  enums.hpp  erroManuseio.hpp  estadoJogador.hpp  gerenciadorAliens.hpp  gerenciadorInimigos.hpp  gerenciadorProjeteis.hpp  inimigo.hpp  interface.hpp  janela.hpp  jogador.hpp  projetil.hpp  recursoManager.hpp  texturaManager.hpp
src/: ator.cpp  enums.cpp  erroManuseio.cpp  gerenciadorAliens.cpp  gerenciadorInimigos.cpp  gerenciadorProjeteis.cpp  inimigo.cpp  interface.cpp  janela.cpp  jogador.cpp  main.cpp  projetil.cpp  recursoManager.cpp
